# Gitfox

./: .gitignore  Cargo.toml  README.md
docs/: README.md
infra/: docker-compose.yml
proto/: ai_review.proto
services/ai-review/: Cargo.toml  Dockerfile  build.rs
services/ai-review/src/: main.rs
services/caching/: Cargo.toml
services/github-integration/: Cargo.toml
services/webhook-listener/: Cargo.toml  Dockerfile  build.rs
services/webhook-listener/src/: main.rs
