[package]
name = "ai-review"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
