[package]
name = "ai-review"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
bytes = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.10"
