[package]
name = "webhook-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
