[package]
name = "webhook-listener"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.4"
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
bytes = "1.0"

[build-dependencies]
tonic-build = "0.10"
